--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #banner {
   height: 100vh; 
-  background-image: url('../img/bunch.jpeg');
+  background-image: url('../bunch.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
