--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
   position: relative;
   height: 100vh;
   overflow: hidden;
-  display: flex; /* Enables flexbox */
-  justify-content: center; /* Centers content horizontally */
-  align-items: center; /* Centers content vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #banner img {
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 0; /* Keeps the image in the background */
+  z-index: 0;
 }
 
 .overlay {
@@ -23,15 +23,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
-  z-index: 1; /* Above the image */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 #banner .container {
   position: relative;
-  z-index: 2; /* Content above overlay */
-  text-align: center; /* Center-align text */
-  color: #ffffff; /* White text for visibility */
+  z-index: 2;
+  text-align: center;
+  color: #ffffff;
 }
 
 .banner-btn a {
@@ -42,24 +42,3 @@
 .banner-btn a:hover {
   text-decoration: underline;
 }
-
-
-/*--body--*/
-
-
-.body {
-  background-color: #ffffff;
-  font-family: "Brygada 1918", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.featurette-divider {
-  margin: 5rem 0; 
-}
-
-.featurette-heading {
-  letter-spacing: -.05rem;
-}
-
