--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
   z-index: 0;
 }
 
+section.d-flex.text-center.text-white {
+  position: relative; /* Make parent relative */
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -24,7 +28,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  z-index: 3;
 }
 
 #banner .container {
