--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   z-index: 0;
 }
 
-section.d-flex.text-center.text-white {
+section.d-flex.text-center.text-black {
   position: relative; /* Make parent relative */
 }
 
