--- a/style.css
+++ b/style.css
@@ -17,18 +17,14 @@
   z-index: 0;
 }
 
-section.d-flex.text-center.text-black {
-  position: relative; /* Make parent relative */
-}
-
 .overlay {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 3;
+  z-index: 2;
 }
 
 #banner .container {
