--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #banner {
-  position: relative;
+  position: absolute;
   height: 100vh;
   overflow: hidden;
   display: flex;
@@ -18,7 +18,7 @@
 }
 
 .overlay {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -28,7 +28,7 @@
 }
 
 #banner .container {
-  position: relative;
+  position: absolute;
   z-index: 2;
   text-align: center;
   color: #ffffff;
